<resources>
    <string name="app_name">AI Infrared AKITA</string>
    <string name="title_device">Device</string>
    <string name="title_people">People Management</string>
    <string name="title_notification">Records</string>
    <string name="title_settings">Settings</string>

    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="remove">Remove</string>
    <string name="retry">Retry</string>
    <string name="sync">Sync</string>
    <string name="apply">Apply</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="done">Done</string>

    <string name="update_successfully">Update Successful</string>
    <string name="create_successfully">create successfully</string>
    <string name="remove_successfully">remove successfully</string>

    <string name="hint_input_device_name">please enter device name</string>
    <string name="hint_device_overwrite">Device had paired, will overwrite setting</string>
    <string name="unable_to_connect_to_device">unable to connect to device...</string>
    <string name="add_first_device">add first device</string>
    <string name="device_connected_click_to_watch_camera">Device connected</string>
    <string name="device_not_connected_yet">Device Not Connected</string>
    <string name="confirm_remove_device">Confirm Device Removal?</string>
    <string name="dialog_add_device">Add Device</string>
    <string name="dialog_connect_hotspot">Connect to Hotspot...</string>

    <string name="msg_file_selected">%1$d file selected</string>
    <string name="msg_files_selected">%1$d files selected</string>
    <string name="no_item_selected">No item selected</string>
    <string name="confirm_face_sync">Confirm face sync?</string>

    <string name="language_en">English</string>
    <string name="language_sc">SimplifiedChinese</string>
    <string name="language_tc">TraditionalChinese</string>
    <string name="language_jp">Japanese</string>
    <string name="language_ko">Korean</string>
    <string name="language_ru">Russian</string>
    <string name="language_it">Italian</string>
    <string name="language_es">Spanish</string>
    <string name="language_de">German</string>
    <string name="language_fr">French</string>
    <string name="language_pt">Portuguese</string>
    <string name="language_tu">Turkish</string>
    <string name="language_pl">Polish</string>

    <string name="title_alert_notification">Notification</string>
    <string name="notification">Notification</string>
    <string name="fever_notification">Fever Notification</string>

</resources>