<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioButton13"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/language_en" />

            <RadioButton
                android:id="@+id/radioButton12"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/language_sc" />

            <RadioButton
                android:id="@+id/radioButton11"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/language_tc" />

            <RadioButton
                android:id="@+id/radioButton10"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/language_jp" />

            <RadioButton
                android:id="@+id/radioButton9"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/language_ko" />

            <RadioButton
                android:id="@+id/radioButton8"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/language_ru" />

            <RadioButton
                android:id="@+id/radioButton7"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/language_it" />

            <RadioButton
                android:id="@+id/radioButton6"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/language_es" />

            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/language_de" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/language_fr" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/language_pt" />

            <RadioButton
                android:id="@+id/radioButton15"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/language_tu" />

            <RadioButton
                android:id="@+id/radioButton14"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/language_pl" />

        </RadioGroup>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/progress_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>